test/testdata/number/times_negative_int_list_error.lox
print -1 * ["hello"]; // error: cannot multiply 'list' by negative 'number'
